crud integration